tot request headers

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Frituur Frida</title>
-    <link rel="icon" href="images/frida.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/frida.css">
-</head>
+<head th:replace="fragments::head(title='Welkom')"></head>
 <body>
+<nav th:replace="fragments::menu"></nav>
 <h1>Frituur Frida</h1>
 <h2>Vandaag zijn we <span th:text="${boodschap}"></span></h2>
 <h2>Adres</h2>
