--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
 <body>
 <nav th:replace="fragments::menu"></nav>
 <h1>Frituur Frida</h1>
+<div th:if="${reedsBezocht}">Welkom terug.</div>
 <h2>Vandaag zijn we <span th:text="${boodschap}"></span></h2>
 <h2>Adres</h2>
 <div th:object="${adres}"
