--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,6 +3,7 @@
         <li><a th:href="@{/}">Welkom</a></li>
         <li><a th:href="@{/sauzen}">Sauzen</a></li>
         <li><a th:href="@{/talen}">Taal</a></li>
+        <li><a th:href="@{/sauzen/alfabet}">Saus alfabet</a></li>
     </ul>
 </nav>
 <head th:fragment="head(title)" xmlns:th="http://www.thymeleaf.org">
